added internal database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/galaxiaDb
-spring.datasource.username=postgres
-spring.datasource.password=sofija18
-
-# default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/galaxiaDb
+#spring.datasource.username=postgres
+#spring.datasource.password=sofija18
+#
+## default connection pool
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+#spring.servlet.multipart.max-file-size=2MB
+#spring.servlet.multipart.max-request-size=2MB
+#
+#spring.profiles.active=test
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
-
-spring.profiles.active=test
+spring.datasource.url=jdbc:postgresql://dpg-cqh6ciaju9rs73ehdrn0-a/galaxiadb
+spring.datasource.username=galaxiadb_user
+spring.datasource.password=XhdOmhbGwGuTg8WbNcEK55oiUi2evevl
