changed database settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,10 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-cqh6ciaju9rs73ehdrn0-a/galaxiadb
-spring.datasource.username=galaxiadb_user
-spring.datasource.password=XhdOmhbGwGuTg8WbNcEK55oiUi2evevl
+#spring.datasource.url=jdbc:postgresql://dpg-cqh6ciaju9rs73ehdrn0-a/galaxiadb
+#spring.datasource.username=galaxiadb_user
+#spring.datasource.password=XhdOmhbGwGuTg8WbNcEK55oiUi2evevl
+
+spring.datasource.url=jdbc:postgresql://dpg-cr66mrrtq21c73ba9jog-a/galaxiadb
+spring.datasource.username=galaxiadb_7pfp_user
+spring.datasource.password=Wpph3BWj1crzCEpfIHhsFmfeHCyGhkpc
